web/.nx/cache/terminalOutputs/5050588320794992562
[36mvite v5.4.14 [32mbuilding for production...[36m[39m
node:internal/process/promises:391
    triggerUncaughtException(err, true /* fromPromise */);
    ^

[Failed to load PostCSS config: Failed to load PostCSS config (searchPath: /Users/alexworden/dev/ReadTheRoom/readtheroom/web): [Error] Loading PostCSS Plugin failed: Cannot find module 'tailwindcss'
Require stack:
- /Users/alexworden/dev/ReadTheRoom/readtheroom/web/postcss.config.js

(@/Users/alexworden/dev/ReadTheRoom/readtheroom/web/postcss.config.js)
Error: Loading PostCSS Plugin failed: Cannot find module 'tailwindcss'
Require stack:
- /Users/alexworden/dev/ReadTheRoom/readtheroom/web/postcss.config.js

(@/Users/alexworden/dev/ReadTheRoom/readtheroom/web/postcss.config.js)
    at load (file:///Users/alexworden/dev/ReadTheRoom/readtheroom/web/node_modules/vite/dist/node/chunks/dep-CHZK6zbr.js:33632:11)
    at file:///Users/alexworden/dev/ReadTheRoom/readtheroom/web/node_modules/vite/dist/node/chunks/dep-CHZK6zbr.js:33657:16
    at Array.map (<anonymous>)
    at plugins (file:///Users/alexworden/dev/ReadTheRoom/readtheroom/web/node_modules/vite/dist/node/chunks/dep-CHZK6zbr.js:33656:8)
    at processResult (file:///Users/alexworden/dev/ReadTheRoom/readtheroom/web/node_modules/vite/dist/node/chunks/dep-CHZK6zbr.js:33726:14)
    at file:///Users/alexworden/dev/ReadTheRoom/readtheroom/web/node_modules/vite/dist/node/chunks/dep-CHZK6zbr.js:33856:14]

Node.js v20.18.1
